Bug 1981536 - Update Widgets section spacing/layout r=home-newtab-reviewers,nbarrett
Differential Revision: https://phabricator.services.mozilla.com/D260182

--- a/browser/extensions/newtab/content-src/components/Widgets/FocusTimer/_FocusTimer.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/FocusTimer/_FocusTimer.scss
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: var(--box-shadow-card);
 }
 
 .focus-timer-tabs {
