--- a/browser/extensions/newtab/content-src/components/Widgets/Lists/_Lists.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/Lists/_Lists.scss
@@ -9,6 +9,7 @@
   border-radius: var(--border-radius-large);
   padding-block: var(--space-large);
   max-height: var(--newtab-card-height);
+  box-shadow: var(--box-shadow-card);
 
   .select-wrapper {
     padding-inline: var(--space-large);
